# NOAA-parser

./: .gitignore  README.md  alerts.json  data_get.py  requirements.txt
mag_data/: correlation_analysis.py  dipole_evolution.py  disturbance_cross_correlation.py  diurnal_analysis.py  eda.py  global_field_modeling.py  igrf14_geomagnetic_pole_drift.py  magnetic_equator_tracking.py  main.py  main_explorer.py  median_sq_analysis.py  pole_dynamics.py  pyproject.toml  saa_tracking.py  secular_variation.py
mag_data/ESWM/: parse_swm_shc.py  plot_crustal_map.py  plot_india_crustal_map.py  plot_india_crustal_map_2E.py  plot_india_gravity_map.py  test_cartopy.py  test_chaos.py  test_fast_synth.py
mag_data/ESWM/SW_OPER_CFW_SHA_2Y_19990101T000000_20240731T000000_1101/: SW_OPER_CFW_SHA_2Y_19990101T000000_20240731T000000_1101.HDR  SW_OPER_CFW_SHA_2Y_19990101T000000_20240731T000000_1101.std  plot_cfw.py
mag_data/ESWM/SW_OPER_EGF_SHA_2__20251201T000000_20251231T235959_0101/: SW_OPER_EGF_SHA_2__20251201T000000_20251231T235959_0101.HDR  SW_OPER_EGF_SHA_2__20251201T000000_20251231T235959_0101.gfc
mag_data/ESWM/SW_OPER_IBP_CLI_2__00000000T000000_99999999T999999_0101/: SW_OPER_IBP_CLI_2__00000000T000000_99999999T999999_0101.HDR  SW_OPER_IBP_CLI_2__00000000T000000_99999999T999999_0101.cdf  SW_OPER_IBP_CLI_2__00000000T000000_99999999T999999_0101.pth  (+3 more)
mag_data/satellite_mag_explorer/: __init__.py  magnetic_model.py  orbit_analysis.py  orbit_engine.py  visualization.py
mag_data/space_weather_mcp/: README.md  main.py  pyproject.toml  scan.py  scan2.py  scan3.py  server.py  test_server.py
(+21 files in other folders)
