[project]
name = "mag-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "chaosmagpy>=0.15",
    "geopandas>=1.1.3",
    "influxdb-client>=1.50.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pyigrf>=1.0.0",
    "scipy>=1.17.1",
    "skyfield>=1.54",
]

[tool.uv.workspace]
members = [
    "space_weather_mcp",
]
